# OmniQuant

./: .env.example  .gitignore  CMakeLists.txt  DEPLOYMENT_CHECKLIST.md  FEATURE_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PWA_FIX_DEPLOY.md  PWA_RENDER_DEPLOYMENT.md  PWA_SETUP.md  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  __init__.py  build.ps1  deploy-render.ps1  examples.py  render.yaml  requirements.txt  setup.py  test-api.ps1  test_system.py  working v1_realtime.txt
analytics/: __init__.py  persistence_tracker.py  regime_detector.py
api/: __init__.py  backend_log.txt  explanation_layer.py  main.py  real_market_data.py
bindings/: py_bindings.cpp
core/: cycle_detector.cpp  cycle_detector.h  edge_pruner.cpp  edge_pruner.h  graph_engine.cpp  graph_engine.h
frontend/: .env.production  DEPLOYMENT.md  package.json  postbuild.js  tailwind.config.js
frontend/public/: generate-icons.html  index.html  service-worker.js
frontend/src/: App.css  App.js  config.js  index.js
frontend/src/components/: ConnectionStatus.js  DisclaimerBanner.js  GradientCounter.js  LatencySensitivityAnalysis.js  MarketImpactCalculator.js  MetricsPanel.js  OpportunityList.js  PWADebug.js  RiskPanel.js
optimizer/: __init__.py  capital_allocator.py
risk/: __init__.py  risk_engine.py  stress_test.py
simulation/: __init__.py  impact_model.py  monte_carlo.py  order_book.py  slippage_model.py
